// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UserProfile > should match snapshot 1`] = `
<div>
  <div
    class="px-6 py-2"
  >
    <button
      class="ant-btn css-dev-only-do-not-override-ut69n1 ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-dropdown-trigger w-full"
      data-testid="user-profile"
      type="button"
    >
      <span
        class="ant-btn-icon"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 256 256"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M230.92,212c-15.23-26.33-38.7-45.21-66.09-54.16a72,72,0,1,0-73.66,0C63.78,166.78,40.31,185.66,25.08,212a8,8,0,1,0,13.85,8c18.84-32.56,52.14-52,89.07-52s70.23,19.44,89.07,52a8,8,0,1,0,13.85-8ZM72,96a56,56,0,1,1,56,56A56.06,56.06,0,0,1,72,96Z"
          />
        </svg>
      </span>
      <span>
        Test User
      </span>
    </button>
  </div>
</div>
`;

exports[`UserProfile > should match snapshot with hidden text 1`] = `
<div>
  <div
    class=""
  >
    <button
      class="ant-btn css-dev-only-do-not-override-ut69n1 ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-icon-only ant-dropdown-trigger w-full"
      data-testid="user-profile"
      type="button"
    >
      <span
        class="ant-btn-icon"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 256 256"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M230.92,212c-15.23-26.33-38.7-45.21-66.09-54.16a72,72,0,1,0-73.66,0C63.78,166.78,40.31,185.66,25.08,212a8,8,0,1,0,13.85,8c18.84-32.56,52.14-52,89.07-52s70.23,19.44,89.07,52a8,8,0,1,0,13.85-8ZM72,96a56,56,0,1,1,56,56A56.06,56.06,0,0,1,72,96Z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;
